2004-09-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b176

	* Fix: Some popups in Mambo were still displaying inside the UI
	  because they were not built using 'type=popup' for makeGalleryURL

2004-09-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b175

	* Fix: Admin password correctly stored in config wiz.

2004-09-09  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b174

	* Fix: removed Warning in classes/Album.php

	* Fix: completed change albums permissions fix.

	* Change: use strict html 4.01 in albums.php for <link> to avoid confused Validator

2004-09-09  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b173

	* Fix: do_command.php, album_permissions.php

	* Fix: initial admin user was not created in setup, as the password were not global.

2004-09-09  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b172

	* Fix: manage users, create user, edit_field.php, add_photos.php, save_photos.php,
	       add_form.inc

2004-09-08  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b171

	* Fix: view_album wasn't honoring $page

	* Fix: PHP notice about unset watermark var in view_album

	* Fix: Correct save_photos when using methods other than Form

2004-09-08  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b170

	* Fix: Bug in view_photo prevented inline comments from operating
	  if the user didn't have View Full rights.

	* Fix: Add missing var to add_comments.php

2004-09-08  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b169

	* Bug 1000425: Use 'deleteButton' instead of 'delete' because
	  of a JS keyword

2004-09-08  Christian Mohn <h0bbel@p0ggel.org>  1.4.5-cvs-b168

        * Fix: Closing bold tag in displayPhotoFields  

2004-09-08  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b167

	* Change: Remove duplicate and unused options from despam-comments

2004-09-08  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b166

	* Change: De-globalize gallery_remote2

	* Fix: function typo in despam-comments
